--- a/index.html
+++ b/index.html
@@ -1,7 +1,54 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages. </p>
+<head>
+<style>
+.button {
+  border: none;
+  color: white;
+  padding: 12px 15px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  font-family: 'Courier New', monospace;
+  cursor: pointer;
+  background-color: #48B8D0;
+}
+td {
+  text-align: right;
+}
+</style>
+</head>
+
+<body style="background-color:#003049;">
+
+<font face = "Bedrock" size = "6">
+<h1 style="text-align: center; color:#fdf0d5"; font:courier>Koji Fox</h1>
+</font>
+
+<table style= "margin-left: auto; margin-right: auto; border-collapse: collapse; width: 400px; height: 1px;">
+  <tr>
+    <td><p style="; text-align: left; color:#fdf0d5">Telegram: </p></td>
+    <td><a href="https://t.me/Foxknots" class="button" style="font: Courier;">@Foxknots</a></td>
+  </tr>
+  <tr>
+    <td><p style="text-align: left; color:#fdf0d5">Bluesky: </p></td>
+    <td><a href="https://bsky.app/profile/koji-fox.bsky.social" class="button">@koji-fox.bsky.social</a></td>
+  </tr>
+  <tr>
+    <td><p style="text-align: left; color:#fdf0d5">Twitter (AD): </p></td>
+    <td><a href="https://x.com/KojiFox_AD" class="button">@KojiFox_AD</a></td>
+  </tr>
+</table>
+
+<p style="text-align: center;"><img src="https://d.furaffinity.net/art/foxknots/1623292793/1623292793.foxknots_image0__1_.jpg" alt="" width="466" height="463" /></p>
+<br />
+
+
+
+
+
 </body>
 </html>
+
+<!--#003049 #FDF0D5 #7F7979 #50C9CE #48B8D0 #48B8D0-->
