--- a/index.html
+++ b/index.html
@@ -1,34 +1,22 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<style>
-.button {
-  border: none;
-  color: white;
-  padding: 12px 15px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  font-family: 'Courier New', monospace;
-  cursor: pointer;
-  background-color: #48B8D0;
-}
-td {
-  text-align: right;
-}
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="styles.css" />
+    <link rel="icon" href="https://a.furaffinity.net/1545195257/foxknots.gif">
+    <title>Foxknots</title>
 </head>
 
 <body style="background-color:#003049;">
 
-<font face = "Bedrock" size = "6">
-<h1 style="text-align: center; color:#fdf0d5"; font:courier>Koji Fox</h1>
+<font face = "Bedrock">
+<h1>Koji Fox</h1>
 </font>
 
-<table style= "margin-left: auto; margin-right: auto; border-collapse: collapse; width: 400px; height: 1px;">
+<table>
   <tr>
-    <td><p style="; text-align: left; color:#fdf0d5">Telegram: </p></td>
+    <td><p style="text-align: left; color:#fdf0d5">Telegram: </p></td>
     <td><a href="https://t.me/Foxknots" class="button" style="font: Courier;">@Foxknots</a></td>
   </tr>
   <tr>
@@ -41,11 +29,8 @@ td {
   </tr>
 </table>
 
-<p style="text-align: center;"><img src="https://d.furaffinity.net/art/foxknots/1623292793/1623292793.foxknots_image0__1_.jpg" alt="" width="466" height="463" /></p>
+<p style="text-align: center;"><img src="https://d.furaffinity.net/art/foxknots/1623292793/1623292793.foxknots_image0__1_.jpg"  /></p>
 <br />
-
-
-
 
 
 </body>
